# hermit-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HERMIT.md  README.md  aiosqlite.pyi  conftest.py  ddgs.pyi  html2text.pyi  install.sh  package.json  pyproject.toml  uninstall.sh
.claude/: settings.json
.claude/commands/: code-apply-hermit.md  feature-develop-hermit.md
.claude/rules/: hermit-gateway-rules.md
.dev/: hermit-tui-verification-followups-2026-04-24.md
.dev/refactor/: README.md  hermes-integration-plan.md  orchestrator-adapter-architecture.md  roadmap.md  test-and-release-stabilization.md
.github/workflows/: publish-github-release.yml  publish-npm.yml  publish-pypi.yml  python-tests.yml
docs/: cc-setup.md  codex-setup.md  hermes-setup.md  known-issues.md  open-source-positioning.md  release-notes-template.md  social-preview-ops.md
docs/architecture/: notifications.md  overview.md
docs/assets/: hermit-social-preview-review.html
hermit-ui/: CAFIBOT_INK_PORT.md  package-lock.json  package.json  tsconfig.json
hermit-ui/src/: TextInput.tsx  app.tsx  config.ts  history.ts  markdown.ts  types.ts  useCopyOnSelect.ts
hermit-ui/src/bootstrap/: state.ts
hermit_agent/: __main__.py  agent_session.py  bridge.py  bridge_client.py  bridge_commands.py  bridge_learning.py  bridge_payloads.py  bridge_runtime.py  bridge_services.py  cli_setup.py  codex_app_server_bridge.py  codex_channels_adapter.py  codex_interaction_contract.py  codex_runner.py  config.py  context.py  context_injector.py  coordinator.py  deepinit.py  doctor.py  events.py  hooks.py  install_claude.py  install_codex.py  install_flow.py  interaction_presenter.py  interactive_prompts.py  interactive_sinks.py  interview.py  kb_learner.py  launcher_health.py  learner.py  learner_extraction.py  learner_reporting.py  learner_storage.py  learner_verification.py  llm_client.py  llm_providers.py  llm_types.py  log_retention.py  (+34 more)
hermit_agent/bridge/: __init__.py  __main__.py  commands.py  core.py  runtime.py  services.py
hermit_agent/channels_core/: __init__.py  approvals.py  event_adapters.py
hermit_agent/codex/: __init__.py  app_server_bridge.py  ask_mcp.py  channels_adapter.py  runner.py
hermit_agent/gateway/: __init__.py  _health_components.py  auth.py  db.py  interactive_session_runtime.py  mcp_tools.py  permission.py  routing.py  sse.py  task_actions.py  task_commands.py  task_execution.py  task_models.py  task_runner.py  task_runtime.py  task_store.py  task_views.py
hermit_agent/guardrails/: engine.py
hermit_agent/hooks/: __init__.py  runner.py  types.py
hermit_agent/interactive_sinks/: __init__.py  claude_mcp.py  codex_app.py  codex_channels.py  codex_transport.py  composite.py
hermit_agent/interfaces/: base.py  cli.py  http.py  telegram.py
hermit_agent/llm/: __init__.py  base.py  factory.py  local.py  openai_compat.py  retry.py  types.py
hermit_agent/loop_commands/: __init__.py  _config.py  _dev.py  _dispatch.py  _registry.py  _session.py  _workflow.py
hermit_agent/mcp/: __init__.py  channel.py  client.py  launcher.py  paths.py  schema.py  server.py  sse_bridge.py  task_proxy.py
hermit_agent/metrics/: aggregator.py
hermit_agent/orchestrators/: __init__.py  claude.py  codex.py  contracts.py  events.py  hermes.py  prompts.py
hermit_agent/permissions/: __init__.py  checker.py  types.py  utils.py
hermit_agent/session/: __init__.py  facade.py  logger.py  logging.py  store.py  wrap.py
hermit_agent/sinks/: __init__.py  codex_app.py  codex_transport.py  composite.py  protocols.py
hermit_agent/tools/: __init__.py  base.py
mcp/: types.pyi
mcp/server/: fastmcp.pyi
mcp/shared/: message.pyi
npm-wrapper/: postinstall.js
npm-wrapper/__tests__/: runtime.test.js  updates.test.js
npm-wrapper/lib/: runtime.js  updates.js
scripts/: render_release_notes.py
tests/: conftest.py  qa_todo_app.py  test_agent_learned_injection.py  test_agent_learner_stop_hook.py  test_agent_session_integration.py  test_anthropic_openai_translator.py  test_auth_context.py  test_auto_recap.py  test_auto_wrap.py  test_bridge_auto_recap_wire.py  test_bridge_client.py  test_bridge_commands.py  test_bridge_event_mapping.py  test_bridge_learning.py  test_bridge_payloads.py  test_bridge_runtime.py  test_bridge_services.py  test_channels_core.py  test_claude_orchestrator_adapter.py  test_cli_defaults.py  test_codex_app_server_bridge.py  test_codex_ask_mcp.py  test_codex_channels_adapter.py  test_codex_channels_cli.py  test_codex_channels_mcp_wiring.py  test_codex_channels_sink.py  test_codex_interaction_contract.py  test_codex_orchestrator_adapter.py  test_codex_reply_bridge.py  test_codex_runner.py  test_compact_hook_us005.py  test_context_compact.py  test_context_injector.py  test_core.py  test_doctor.py  test_doctor_cli.py  test_edit_diff_format.py  test_gateway_admission.py  test_gateway_internal_interactive_routes.py  test_gateway_mcp_tools.py  (+89 more)
(+61 files in other folders)
