[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cafitac-hermit-agent"
version = "0.3.7"
description = "Hermit keeps Claude Code as the orchestrator while a local MCP executor handles Codex-aware coding work."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = [
    "claude-code",
    "coding-agent",
    "codex",
    "developer-tools",
    "gateway",
    "interactive",
    "llm",
    "local-llm",
    "mcp",
    "ollama",
]
authors = [
    { name = "HermitAgent Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "html2text",
    "ddgs",
    "httpx",
    "requests",
    # mcp pin: the channel-notification path uses the private
    # `ServerSession._write_stream.send(...)` attribute (see
    # .omc/plans/bun-channel-merge.md ADR). Pin the major version until
    # `tests/test_mcp_notification_wire.py` is confirmed on the next one.
    "mcp>=1.27,<2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "anyio>=4.0.0",
    "python-multipart",
]

[project.optional-dependencies]
ui = ["prompt_toolkit"]
test = ["pytest>=8", "pyyaml"]
dev = [
    "pytest>=8",
    "pyyaml",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
hermit = "hermit_agent.__main__:main"
hermit-agent = "hermit_agent.__main__:main"
hermit-gateway = "hermit_agent.gateway.__main__:main"
hermit-mcp-server = "hermit_agent.mcp_launcher:main"
hermit-setup = "hermit_agent.cli_setup:main"

[project.urls]
Homepage = "https://github.com/cafitac/hermit-agent"
Repository = "https://github.com/cafitac/hermit-agent"
Issues = "https://github.com/cafitac/hermit-agent/issues"
Documentation = "https://github.com/cafitac/hermit-agent#readme"

[tool.setuptools.packages.find]
include = ["hermit_agent*"]

[tool.setuptools.package-data]
"hermit_agent.gateway" = ["templates/*.html", "migrations/*.sql"]
